added all CSS variables for color, media queries for large and medium devices

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <!-- main logo/ navbar -->
-    <h1>Sam Adams Portfolio</h1>
     <header>
+        <h1>Sam Adams Portfolio</h1>
         <nav>
             <a href="#">Home</a>
             <a href="#">About</a>
@@ -21,13 +21,13 @@
     </header>
 
     <!-- hero banner -->
-    <section>
+    <section class="hero-banner">
         <div>
             <h2>Flexbox Portfolio</h2>
         </div>
     </section>
 
-    <main>
+    <main class="page-wrapper">
         <!-- About Me Section -->
         <section class="page-section" id="about-me">
             <h2>About Me</h2>
